# inspectors

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: aur.yml  ci.yml
apps/control-plane/: package.json
apps/control-plane/src/: index.ts  server.browser-fallback.test.ts  server.desktop-app.test.ts  server.live-view.test.ts  server.playwright-load.test.ts  server.test.ts  server.ts  types.ts
apps/sandbox-runner/: index.mjs  package.json
apps/web-ui/: package.json
apps/web-ui/public/: app.js  index.html  live-view.js  live-view.test.js  provider-default.test.js  session-link.test.js  styles.css
apps/web-ui/public/styles/: base.css  components.css  layout.css  tokens.css
crates/desktop-app/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop-app/packaging/: inspectors.desktop
crates/desktop-app/resources/control-plane/: package.json
crates/desktop-app/resources/control-plane/ui/: app.js  index.html  live-view.js  live-view.test.js  provider-default.test.js  session-link.js  ui-enhancements.js
crates/desktop-app/resources/control-plane/ui/styles/: layout.css
crates/desktop-app/src/: lib.rs  main.rs
crates/desktop-app/ui/: index.html
crates/desktop-core/: Cargo.toml  README.md
crates/desktop-core/src/: bin-export-schemas.rs  lib.rs
crates/guest-runtime/: Cargo.toml  README.md
crates/guest-runtime/src/: lib.rs  main.rs
crates/guest-runtime/tests/: qemu_bridge.rs
crates/linux-backend/: Cargo.toml  README.md
crates/linux-backend/src/: lib.rs
docs/: README.md  api-reference.md  architecture.md  getting-started.md  plugin-guide.md  qemu-guest-bridge.md  release.md  security-model.md
evals/: README.md
evals/benchmarks/: README.md
evals/fixtures/: README.md
evals/tasks/: browser-research.json  code-editor.json  file-terminal.json  qemu-acceptance-regression.json  qemu-action-bridge.json  qemu-bridge-bootstrap.json  qemu-browser-trust-boundary.json  qemu-live-view-demo.json  taskers-qemu-dogfood.json  xvfb-regression-smoke.json
output/: ralplan-vm-overview-prompt.md
packaging/aur/: .gitignore  README.md
packaging/aur/inspectors-desktop/: .SRCINFO  PKGBUILD
packaging/aur/inspectors-desktop-bin/: .SRCINFO  PKGBUILD
packaging/aur/inspectors-desktop-git/: .SRCINFO  PKGBUILD
python/examples/: browser_research.py  code_editor.py  file_terminal.py
python/sdk/: __init__.py  client.py
sandbox/: README.md
sandbox/policies/: default-policy.json
schemas/: action.schema.json  error.schema.json  observation.schema.json  task.schema.json
scripts/: aur-common.sh  build-desktop-release-asset.sh  check-aur-packages.sh  dev-start.sh  publish-aur-package.sh  qemu_guest_assets.py  release-crates-alpha.sh  run-qemu-acceptance.py  run-qemu-live-view-demo.py  run-smoke-eval.py  run-taskers-qemu-dogfood.py  sync-desktop-resources.mjs  update-aur-srcinfo.sh
