[workspace]
resolver = "2"
members = [
  "crates/desktop-core",
  "crates/linux-backend",
  "crates/guest-runtime",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
schemars = { version = "1.0.4", features = ["chrono04", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
