[package]
name = "desktop-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Linux-first Tauri desktop operator app for the Agent Computer Use Platform."
build = "build.rs"
default-run = "inspectors-desktop"

[[bin]]
name = "inspectors-desktop"
path = "src/main.rs"

[dependencies]
guest-runtime.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10.3" }
tauri-plugin-single-instance = "2.4.1"
tokio.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6" }
