[package]
name = "desktop-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "export-schemas"
path = "src/bin-export-schemas.rs"
