[package]
name = "desktop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core schemas and shared types for the Agent Computer Use Platform desktop runtime."
readme = "README.md"
documentation = "https://docs.rs/desktop-core"
keywords = ["agent", "desktop", "automation", "schema", "computer-use"]
categories = ["development-tools"]

[dependencies]
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "export-schemas"
path = "src/bin-export-schemas.rs"
