[package]
name = "guest-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
desktop-core = { path = "../desktop-core" }
linux-backend = { path = "../linux-backend" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
